--- a/src/main/resources/translations/texts.properties
+++ b/src/main/resources/translations/texts.properties
@@ -14,7 +14,7 @@
 
 headline=Move to the latest Java today!
 
-intro=20 years ago Java was born and has been the worlds dominant programming language and runtime environment ever since. \
+intro=20 years ago Java was born and has been the world's dominant programming language and runtime environment ever since. \
 Now that we're twenty years on, the world has changed and Java along with it\! For Java versions 4, 5, 6 and 7, \
 it's time to say goodbye. This website is dedicated watching Java 4, 5, 6 and 7 usage drop to less \
 than 1% worldwide, so hundreds of millions of users are safer and 9-10 million developers are \
@@ -47,7 +47,7 @@ notready.text=If, for some special reason, you're not ready to move now, Oracle 
 the support you need to keep your organisation and your users safe.
 
 latest.headline=Latest Information
-latest.text=<strong>Oct 2015</strong> - Java 8u60 is the latest secure release of Java.
+latest.text=<strong>Jan 2016</strong> - Version 8 Update 71 is the latest secure release of Java.
 
 about.headline=About this site
 
@@ -55,7 +55,7 @@ about.text=This is a joint project by the \
 <a href="http://java-champions.java.net/" target="_blank">Java Champions</a>, \
 <a href="http://www.java.net/jugs/java-user-groups" target="_blank">JUG Leaders</a> \
 and the <a href="http://adoptopenjdk.java.net" target="_blank">Adopt OpenJDK</a> programme. \
-It's purpose is to gather information about the state of Java in the Browser eco-system and \
+Its purpose is to gather information about the state of Java in the Browser eco-system and \
 encourages end-users and developers to always adopt the latest, most secure Java technology.
 
 footer.selectlang=Select Language
